# Bakalura-Darbs

./: README.md
programs/clang/: CMakeLists.txt  main.c
programs/clang/common/: node.c  node.h  read.c  read.h  shader.c  shader.h  texture.c  texture.h
programs/clang/objects/: object.c  object.h
programs/clang/res/shaders/: test_vertex_shader.txt  vertex_shader.txt
programs/clang/res/textures/: tuto-14-diffuse.dds  tuto-14-normal.dds
programs/datnes sanemshana/: Full0001.csv  Full0002.csv  Full0003.csv  Full0004.csv  Full0005.csv  Go0001.csv  results.xlsx
programs/golang/project/: GOLang0002.csv  GOLang0002.hml  GOLang0003.csv  GOLang0003.hml  GOLang0004.csv  GOLang0004.hml  GOLang0005.csv  GOLang0005.hml  Go0001.hml  checker.ps1  main.go  textfile.txt  textfile2.txt  textfile3.txt  textfile4.txt  textfile5.txt
programs/golang/project/common/: read.go  shader.go  texture.go
programs/golang/project/object/: object.go
programs/redaktors/: Cargo.toml
programs/redaktors/src/: entity.rs  main.rs
programs/redaktors/src/common/: loader.rs
programs/redaktors/src/entity/: camera.rs  mouse_picker.rs  mouse_picker_test.rs  object.rs  vertex.rs
programs/redaktors/src/res/shader/: fragment_shader.txt  vertex_shader.txt
programs/rust/: .gitignore  Cargo.toml
programs/rust/src/: main.rs  objects.rs
programs/rust/src/common/: read.rs
programs/vlang/: VLang0001.csv  VLang0001.hml  VLang0002.csv  VLang0002.hml  VLang0003.csv  VLang0003.hml  VLang0004.csv  VLang0004.hml  VLang0005.csv  VLang0005.hml  checker.ps1  cube.v  fns.txt  main.v  textfile2.txt  textfile3.txt  textfile4.txt  textfile5.txt
veidne/: BakD_veidne_Aleksandrs_Korolko.docx  ITI_Darba_noformesana_2016.docx  web sites.txt  ~$kD_veidne_Aleksandrs_Korolko.docx
(+9 files in other folders)
